--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -12,11 +12,11 @@
 <body>
     <div class="header">
         <div class="pure-menu pure-menu-open pure-menu-fixed pure-menu-horizontal">
-            <a class="pure-menu-heading" href="{% url 'home' %}">SIMPLE MOOC</a>
+            <a class="pure-menu-heading" href="{% url 'main:home' %}">SIMPLE MOOC</a>
             <ul>
-                <li class="pure-menu-selected"><a href="{% url 'home' %}">Início</a></li>
+                <li class="pure-menu-selected"><a href="{% url 'main:home' %}">Início</a></li>
                 <li><a href="#">Cursos</a></li>
-                <li><a href="{% url 'contact' %}">Contato</a></li>
+                <li><a href="{% url 'main:contact' %}">Contato</a></li>
             </ul>
         </div>
     </div>
